log
ju.,  7 de abr. de 2022 12:37:43: 
 tests:  0|6
total_score: 0/70
10c1b69
ju.,  7 de abr. de 2022 12:42:04: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
5ee7ba5
ju.,  7 de abr. de 2022 12:44:57: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7c29ed8
ju.,  7 de abr. de 2022 12:51:49: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6806987
ju.,  7 de abr. de 2022 13:18:40: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:42: error: invalid operands to binary - (have 'Pair * {aka struct Pair *}' and 'char *')
         if(is_equal(key,map->buckets[idx]-key) == 1)return;
                         ~~~~~~~~~~~~~~~~~^
hashmap.c:51:9: error: expected ';' before 'map'
         map->buckets[idx]->value = value
         ^~~
hashmap.c:54:5: error: expected ';' before 'map'
     map->size += 1;
     ^~~
Compilation failed
41aa668
ju.,  7 de abr. de 2022 13:19:25: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:54:5: error: expected ';' before 'map'
     map->size += 1;
     ^~~
Compilation failed
4e9fccc
ju.,  7 de abr. de 2022 13:19:38: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
f853ab6
do., 10 de abr. de 2022 21:33:35: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
4b4156b
do., 10 de abr. de 2022 21:36:09: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3671ccf
do., 10 de abr. de 2022 21:39:03: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
2e95c52
do., 10 de abr. de 2022 21:49:06: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
5c370da
do., 10 de abr. de 2022 21:51:28: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
82ad463
do., 10 de abr. de 2022 21:52:34: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
be59194
do., 10 de abr. de 2022 21:54:38: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
5f29da4
do., 10 de abr. de 2022 21:55:35: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:76:45: error: 'return' with a value, in function returning void [-Werror]
         if(map->buckets[idx] == NULL)return NULL;
                                             ^~~~
hashmap.c:73:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e2221d1
do., 10 de abr. de 2022 21:55:50: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:76:45: error: 'return' with a value, in function returning void [-Werror]
         if(map->buckets[idx] == NULL)return NULL;
                                             ^~~~
hashmap.c:73:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c: In function 'searchMap':
hashmap.c:87:38: error: 'return' with no value, in function returning non-void [-Werror]
         if(map->buckets[idx] == NULL)return;
                                      ^~~~~~
hashmap.c:84:8: note: declared here
 Pair * searchMap(HashMap * map,  char * key) {
        ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5bab340
do., 10 de abr. de 2022 21:56:21: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
34361c6
do., 10 de abr. de 2022 22:02:55: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
32df657
do., 10 de abr. de 2022 22:05:19: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
d08c870
do., 10 de abr. de 2022 22:06:08: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
2cd9704
